<resources>
    <string name="app_name">InterRapidisimo</string>
    <string name="title_home">Home</string>
    <string name="title_localities">Localidades</string>
    <string name="title_tables">Tablas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Inicia sesión</string>
    <string name="next">Login</string>
    <string name="usuario">Usuario</string>
    <string name="ingresa_tu_usuario">Ingresa tu usuario</string>
    <string name="ingresa_las_credenciales_de_acceso">Ingresa tus credenciales de acceso</string>
    <string name="ingresa_tu_clave">Ingresa tu clave</string>
    <string name="ingresa_tu_password">Ingresa tu password</string>
    <string name="password">Password</string>
    <string name="interrapidisimo_go">Interrapidisimo Go!</string>
    <string name="logo">Logo</string>
    <string name="actualizar">Actualizar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tenemos_noticias">¡Tenemos noticias!</string>
    <string name="available_update_app">Actualiza tu app para seguir disfrutando de todos nuestros beneficios que tenemos para ti</string>
    <string name="not_available_update_app">Tienes tu App actualizada. ¡Sigue disfrutando!</string>
    <string name="icon">Icon</string>
    <string name="nombre_aplicaci_n">Nombre Aplicación</string>
    <string name="tablas">Tablas</string>
    <string name="localidades">Localidades</string>
    <string name="identificaci_n">Identificación:</string>
    <string name="id_centro_servicio">Id Centro Servicio:</string>
    <string name="localidad">Localidad:</string>


</resources>