<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/tv_show_header"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/splash_api_android_down_30_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_show_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/ingresa_las_credenciales_de_acceso"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_show_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:helperText="@string/ingresa_tu_usuario"
            app:helperTextEnabled="true"
            style="?attr/textInputOutlinedDenseStyle"
            app:boxStrokeColor="@color/text_input_layout"
            app:hintTextColor="@color/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_show_info">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_user_data"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/usuario"
                android:inputType="text"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:helperText="@string/ingresa_tu_password"
            app:helperTextEnabled="true"
            style="?attr/textInputOutlinedDenseStyle"
            app:boxStrokeColor="@color/text_input_layout"
            app:hintTextColor="@color/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_password_data"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                android:padding="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_first"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>